# NetMF

./: .gitignore  README.md  setup.cfg
src/netmf/: __init__.py  netmf.py  ppi.py  predict.py
