##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = netmf
version = 0.0.1

# Author information
author = Jiezhong Qiu

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    Node Representation Learning
    Network Representation Learning

[options]
install_requires =
    scipy
    numpy
    theano
    sklearn

python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
